# oneboot-sdk-client

./: .gitignore  Jenkinsfile  README.md  docker-build.bat  dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
public/assets/: css.worker-2af7c35b.js  css.worker-9nyR4EGY.js  editor.api-6505477e.js  editor.worker--ve5EaNg.js  html.worker-44619797.js  html.worker-o6bgX22d.js  json.worker-LiPYPKgE.js  json.worker-ca32777f.js
src/: App.vue  app.ts  global.d.ts  main.ts  primevue.ts
src-tauri/: .gitignore  Cargo.toml  a.json  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/capabilities/schemas/: desktop-schema.json
src-tauri/src/: core.rs  lib.rs  main.rs  restful.rs  thrift.rs
src-tauri/src/_pest_home/: domain.pest  restful.pest  thrift.pest
src-tauri/src/core/: db.rs  error.rs  http.rs  io.rs  parser.rs  store.rs  strsim.rs
src-tauri/src/core/parser/: domain.rs  restful.rs  thrift.rs
src-tauri/src/restful/: api.rs  apis_util.rs  gen.rs  restful_dsl_api.rs  sdk_api.rs
src-tauri/src/thrift/: api.rs  client.rs  gen.rs
src-tauri/tests/: test_thrift.rs
src/api/: apis-util.ts  apisUtil.ts  index.ts  rust_api.ts
src/assets/styles/: global.css  global.scss
src/components/: ThemeAndLocale.vue
src/components/domain-dsl-editor/: Index.vue  puml.ts  valid.ts
src/components/icons/: Locale.vue
src/components/layout/: Flex.vue  Grid.vue  Space.vue
src/components/restful-api-editor/: Index.vue  api.ts  define.ts  restful.ts
src/components/restful-dsl-editor/: Index.vue  define.ts  restl.ts
src/components/server-api/: index.ts
src/constants/: index.ts  settings.ts
src/domain/vo-mapper/: define.ts  index.ts  path.ts
src/domains/vo-mapper/: gen.ts  index.ts
src/plugins/: global.ts  primevue.ts  router.ts
src/router/: index.ts
src/store/: ConfigStore.ts  EditorStore.ts  HotkeyStore.ts  index.ts
src/stores/: user-preference-store.ts
src/utils/: dyn_component.ts  fun.ts  index.ts  io.ts  parser.ts  path.ts  rust_api.ts  str.ts
src/views/: CheckClientCode.vue  CheckCode.vue  CheckServerCode.vue  CheckServerRestfulCode.vue  CheckServiceStatus.vue  GenApiDocs.vue  GenApisUtil.vue  GenCrudService.vue  GenDomain.vue  GenMapStruct.vue  GenRestfulApi.bak.vue  GenRestfulApi.vue  HelpDatabase.vue  Home.vue  Options.vue  Options_bak.vue  RulesOfDatabase.vue  RulesOfJava.vue  RulesOfRestfulLanguage.vue  Settings.vue  WikiUtil.vue
