[package]
name = "oneboot-sdk-client"
version = "0.0.1"
description = "oneboot-sdk-client"
authors = ["AlphaFox"]
license = "Apache-2.0"
repository = ""
edition = "2021"

[lib]
name = "oneboot_sdk_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
tauri-plugin-window = "2.0.0-alpha"
tauri-plugin-shell = "2.0.0-alpha"
tauri-plugin-store = "2.0.0-alpha"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thrift = "0.17.0"
rs-snowflake = "0.6.0"
lazy_static = "1.4.0"
error-chain = "0.12.4"
pest = { version = "2.7.2", features = ["std", "pretty-print"] }
pest_derive = "2.7.2"
sled = "0.34.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
