[package]
name = "oneboot-sdk-client"
version = "0.0.1"
description = "oneboot项目的sdk模块客户端工具 SDK module client tool for oneboot project"
authors = ["AlphaFoxz@github.com"]
license = "Apache-2.0"
repository = "https://github.com/AlphaFoxz/oneboot-sdk-client"
edition = "2021"
rust-version = "1.71"

[lib]
name = "oneboot_sdk_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
tauri-plugin-window = "2.0.0-alpha"
tauri-plugin-shell = "2.0.0-alpha"
tauri-plugin-store = "2.0.0-alpha"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thrift = "0.17.0"
rs-snowflake = "0.6.0"
lazy_static = "1.4.0"
pest = { version = "2.7.2", features = ["std", "pretty-print"] }
pest_derive = "2.7.2"
reqwest = "0.11.22"
tokio = { version = "1.35.0", features = ["macros"] }
thiserror = "1.0.51"
async-recursion = "1.0.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
